--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h1 class="col">Users</h1>
   </div>
   <div class="row">
-    <app-user-filter (searchUser)="searchUser($event)"></app-user-filter>
+    <app-user-filter></app-user-filter>
   </div>
-  <app-users-table [users]="users" (deleteUser)="handleUserDeletion($event)"></app-users-table>
+  <app-users-table></app-users-table>
 </div>
